tests/cases/match/errors/enum-duplicate-case.ari
enum Bad {
  A,
  A,
}

fn main() -> i64 {
  return 0;
}
